# rofl

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: roflConfig.cmake
common/: CMakeLists.txt
common/app/: test_interval_indices.cpp  test_io.cpp  test_label_set.cpp  test_min_max_heap.cpp  test_morton_functions.cpp  test_morton_order.cpp  test_morton_order_int.cpp  test_morton_sort.cpp  test_morton_tree.cpp  test_numeric_traits.cpp  test_peak_finder_d.cpp  test_tls_scalar_consensus.cpp
common/include/rofl/common/: bit_manip.h  disjoint_set.h  functions.h  grid.h  interval_indices.h  io.h  label_set.h  macros.h  min_max_heap.h  morton_sort.h  morton_tree.h  numeric_traits.h  param_map.h  peak_finder_d.h  profiler.h  tls_scalar_consensus.h  vector_array.h
common/src/: bit_manip.cpp  disjoint_set.cpp  functions.cpp  io.cpp  label_set.cpp  morton_tree.cpp  param_map.cpp  profiler.cpp
geometry/: CMakeLists.txt
geometry/app/: test_correspondence_graph.cpp  test_hough_plane_detector.cpp
geometry/include/rofl/geometry/: base_geometry2.h  box_registration.h  correspondence_graph_association.h  gis.h  hough_line_detector.h  hough_plane_detector.h  types.h
geometry/src/: base_geometry2.cpp  box_registration.cpp  correspondence_graph_association.cpp  gis.cpp  hough_line_detector.cpp  hough_plane_detector.cpp
pcl/: CMakeLists.txt
pcl/include/rofl/pcl/: point_cloud_plane_aligner.h
pcl/src/: point_cloud_plane_aligner.cpp
